# CAOS_course

./: .asm-lsp.toml  .clang-format  .clang-format-11  .clangd  .gitignore  .gitlab-ci.yaml  .manytask.yaml  .manytask.yml  .private-ci.yaml  CMakeLists.txt  Dockerfile
.private-ci/: Dockerfile
cmake/: Arch.cmake  Flags.cmake
common/: CMakeLists.txt
common/caos_nostd/: CMakeLists.txt
common/caos_nostd/include/: algorithms.hpp  assert.hpp  io.hpp  strings.hpp
common/caos_nostd/src/: builtins.cpp  io.cpp  strings.cpp
common/catch/: CMakeLists.txt  ut_main.cpp
common/include/: defer.hpp  distributions.hpp  fd_guard.hpp  macros.hpp  overload.hpp  rlim_guard.hpp
common/include/nejudge/: checker.h  checker2.h  testinfo.h
common/nostd/: CMakeLists.txt
common/nostd/include/: assert.hpp  random.hpp
common/syscalls/: CMakeLists.txt
common/syscalls/include/: syscalls.hpp
common/syscalls/src/: syscalls.cpp
common/tools/: build_all_tasks.sh  export_to.sh  test.py  test_all_tasks.sh  test_tasks_with_diff.sh  xml2md.py
docs/: env-setup.md  linux.md  nostd.md  repo-setup.md
tasks/: CMakeLists.txt
tasks/01-basic-io/a-plus-b/: README.md  a-plus-b.cpp  test.cpp  testing.yaml
tasks/01-basic-io/char-sum/: CMakeLists.txt  README.md  solution.cpp  testing.yaml
tasks/01-basic-io/fib-root/: CMakeLists.txt  README.md  solution.cpp  testing.yaml
tasks/01-basic-io/list/: CMakeLists.txt  README.md  list.hpp  test.cpp  testing.yaml
tasks/01-basic-io/reverse-list/: CMakeLists.txt  README.md  reverse-list.cpp  reverse-list.hpp  test.cpp  testing.yaml
tasks/03-mmap/c-strings/: CMakeLists.txt  README.md  alloc.cpp  c-strings.hpp  no-alloc.cpp  test-nostd.cpp  test.cpp  testing.yaml
tasks/05-misc/goto/: README.md  (+6 more)
tasks/a-plus-b/: CMakeLists.txt  a-plus-b.cpp  a-plus-b.h
tasks/list/: list.hpp
tasks/simple-allocator/: CMakeLists.txt  simple-allocator.cpp  testing.yaml
xtask/: Cargo.toml
xtask/src/: command.rs  compose.rs  dispatch.rs  lib.rs  main.rs  move.rs  task.rs  test.rs
xtask/src/util/: clang-fmt.rs  ext.rs  manytask-api.rs  mod.rs
(+140 files in other folders)
