[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = { version = "1.0" }
itertools = { version = "0.14" }
globset = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_yml = { version = "0.0" }
serde_json = { version = "1.0" }
gix = { version = "0.73" }
num_cpus = { version = "1.17" }
anstream = { version = "0.6.19" }
annotate-snippets = { version = "0.12" }
walkdir = { version = "2.5" }
regex = { version = "1.10" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tap = { version = "1" }
strum = { version = "0.27" }
strum_macros = { version = "0.27" }
# NOTE: native-tls-vendored can be used instead of rustls-tls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
